Change Log

All notable changes to this project will be documented in this file.

[1.0.5] - 26/11/2023
Added
    - User can now become car owner through signing up
Changed
    
Fixed
    - User now shown menu for car owner after successfully signing up as car owner
    - Car owner menu now successfully log out

[1.0.4] - 24/11/2023
Added
    - De-activate account function now soft-delete the user session instead of deleting it from the database
Changed
    - Login page now checks for active session logic, otherwise, show main menu
Fixed
    - Error "user.Active undefined" user struc lacks an Active field that the code attempts to access or modify.
    - Error "cannot use &now (type of *time.Time) as type gorm.DeletedAt" indicate a type mismatch.
    - User session not cleared after de-activating account
    - After de-activating account, user is not sent back to the login menu

[1.0.3] - 23/11/2023
Added
    - Added variable session to simulate saved session
    - Add User Name Update Profile
Changed
    
Fixed
    - Fixed HTTP Status code 400, 401, 404, 405 & 500 
    - Name update now PATCH to database

[1.0.2] - 22/11/2023
Added
    - Console Application for User Menu
    - Password for User account's creation
    - Password Hashing for security
    - User information during creation is successfully added to mySQL database
    - User login now extract information from mySQL database for authentication
    - User login now compares hashed password
    - Show userType based menu (Passenger or Car Owner)
Changed

Fixed
    - SignUp handler not saving into information into mySQL database

[1.0.1] - 21/11/2023
Added
    trip-service MAJOR Init main.go
    trip-models PATCH Add Trip and Reservation structure models
    user-models PATCH Add Passenger and CarOwner structure models
    user-handlers PATCH Add handlers to respond HTTP requesst, interacting with the database

    - Import database in main to call 'InitializeDatabase' func